--- a/style.css
+++ b/style.css
@@ -2,10 +2,46 @@
       margin-bottom: 0;
       border-radius: 0;
     }
-.h {
-      background-color: salmon ;
-    }
 footer {
-      background-color: salmon;
+      background-color: white;
       padding: 25px;
     }
+     #wrap {
+		display: none;
+		opacity: 0.8;
+		position: fixed;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		padding: 16px;
+		background-color: rgba(1, 1, 1, 0.725);
+		z-index: 100;
+		overflow: auto;
+	}
+	
+	#window {
+		width: 300px;
+		height: 300px;
+		margin: 50px auto;
+		display: none;
+		background: #fff;
+		z-index: 200;
+		position: fixed;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		padding: 16px;
+	}
+	
+	.close {
+		margin-left: 364px;
+		margin-top: 4px;
+		cursor: pointer;
+	}
+  .b{
+    cursor: pointer;
+  }
+	
+	
